--- a/public/css/app.css
+++ b/public/css/app.css
@@ -48299,3 +48299,15 @@ body {
   color: #444;
 }
 
+.widget-user-header {
+  background-position: center center;
+  background-size: cover;
+  background: url(/images/user-cover.jpg?261e82ec128812a2a9059997c487fb98) center center;
+  min-height: 250px !important;
+  box-shadow: inset 0 0 0 2000px rgba(255, 0, 150, 0.3);
+}
+
+.widget-user .card-footer {
+  padding: 0;
+}
+
