--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -23,3 +23,13 @@ body{
     background: #eee;
     color: #444;
   }
+  .widget-user-header{
+    background-position: center center;
+    background-size: cover;
+    background: url('./img/user-cover.jpg') center center; 
+    min-height:250px !important; 
+    box-shadow:inset 0 0 0 2000px rgba(255, 0, 150, 0.3);
+}
+.widget-user .card-footer{
+    padding: 0;
+}
